# aioadmin

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: publish.yml
src/aioadmin/: __init__.py  adapter.py  example.py  permissions.py  record.py
src/aioadmin/aiogram/: middleware.py  router.py
src/aioadmin/aiogram/handlers/: get_table.py  menu.py  start.py  states.py
src/aioadmin/orm/: sqlalchemy.py
tests/: test_permissions.py  test_record.py
tests/sqlalchemy/: conftest.py  models.py  test_create_record.py  test_delete_record.py  test_get_record_detail.py  test_get_table.py  test_get_tables.py  test_update_record.py
