[project]
name = "aioadmin"
version = "0.1.0"
description = "Admin panel for aiogram"
readme = "README.md"
authors = [
    { name = "AliakseiYafremau", email = "aleksey.yafremau@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]