[project]
name = "aioadmin"
version = "0.0.1"
description = "Admin panel for aiogram"
readme = "README.md"
authors = [
    { name = "AliakseiYafremau", email = "aleksey.yafremau@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
